--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^1.4.3",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
