--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@headlessui/react": "^1.4.3",
     "autoprefixer": "^10.4.2",
+    "framer-motion": "^7.2.1",
     "postcss": "^8.4.5",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
